# xiv-overlay

./: Cargo.toml  README.md  config.yaml
src/: app.rs  app_config.rs  config.rs  errors.rs  layout_config.rs  main.rs  overlay.rs
src/ui/: mod.rs  overlay_infos.rs  sidebar.rs
styles/: app.css
