[package]
name = "overlay-ff14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "^0.16.0"
gtk-sys = "^0.16.0"
gdk = "^0.16.0"
gdk-sys = "^0.16.0"
gio = "^0.16.0"
gio-sys = "^0.16.0"
glib = "^0.16.0"
glib-sys = "^0.16.0"
cairo-rs = "^0.16.0"
webkit2gtk = { version = "1.1.0", features = ["v2_8"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"
async-channel = "1.8.0"
pretty_env_logger = "0.5.0"
log = "0.4.19"
